<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Здравствуйте, Пациент!"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_branches"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginBottom="10dp"
        android:text="Выбрать филиал и врача"
        android:textSize="22sp"
        android:backgroundTint="#3498DB"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_my_appointments"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="Мои записи"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:backgroundTint="#3498DB"
        android:textColor="#fff" />
    <Button
        android:id="@+id/btn_messages"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textColor="#fff"
        android:backgroundTint="#3498DB"
        android:text="Сообщения" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="Выйти из аккаунта"
        android:textSize="22sp"
        android:backgroundTint="#3498DB"
        android:textColor="#fff" />

</LinearLayout>