<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Имя пользователя">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Пароль">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Подтвердите пароль">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_submit"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="Зарегистрироваться"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        android:textColor="#fff"
        android:backgroundTint="#3498DB" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="Назад"
        android:textSize="22sp"
        android:textColor="#fff"
        android:backgroundTint="#3498DB" />

</LinearLayout>